# prog-bot

./: .gitignore  .gitlab-ci.yml  README.md  flake.nix  justfile  project-scope.md
common-lib/: Cargo.toml
common-lib/src/: lib.rs
core/: cargo-add-defaults.sh  justfile
core/chat-bot/: Cargo.toml
core/linter/: Cargo.toml  rust-toolchain.toml
core/linter/src/: main.rs  test.rs
core/linter/test-data/linter-test-1/: Cargo.toml
core/linter/test-data/linter-test-1/src/: main.rs
core/lsp/: Cargo.toml
core/lsp/src/: main.rs
core/message-bus/: Cargo.toml  justfile
core/message-bus/src/: main.rs
core/message-bus/src/test/: mod.rs
core/prog-bot/: Cargo.toml
core/stt/: .gitignore  Cargo.toml  README.md  justfile
core/stt/src/: main.rs
core/todo-collector/: Cargo.toml
core/todo-collector/src/: ast.rs  data_types.rs  database.rs  main.rs  test.rs  todo-grammar.pest  todo-grammar.pest.bak
core/todo-collector/test-data/lsp-test-1/: Cargo.toml
core/todo-collector/test-data/lsp-test-1/src/: main.rs
core/todo-collector/test-data/todo-test-1/: Cargo.toml
core/todo-collector/test-data/todo-test-1/src/: main.rs  main.rs~
core/tts/: Cargo.toml  entr.list  justfile
core/tts/src/: main.rs
core/tui/: Cargo.toml
core/tui/src/: app_state.rs  main.rs
core/utterance-detection/: Cargo.toml  README.md
core/utterance-detector/: .gitignore  Cargo.toml
core/web-hook-intake/: Cargo.toml
core/web-hook-intake/src/: main.rs
data-types/: Cargo.toml
data-types/src/: ast.rs  database.rs  lib.rs  lsp.rs  todo.rs
