[package]
name = "prog-bot-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
futures-util = "0.3.30"
prog-bot-data-types = { version = "0.1.0", path = "../data-types" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", default-features = false, features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
