[package]
name = "prog-bot-data-types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
uuid = { version = "1.9.1", features = ["fast-rng", "serde", "v4"] }
