[package]
name = "prog-bot-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-lsp = { version = "0.2.0", features = ["async-io", "tokio"] }
async-process = "2.3.0"
ctrlc = "3.4.5"
futures-util = "0.3.30"
prog-bot-common = { version = "0.1.0", path = "../../common-lib" }
prog-bot-data-types = { version = "0.1.0", path = "../../data-types" }
# serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tower = "0.4.13"
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
