[package]
name = "prog-bot-todo-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
ctrlc = "3.4.5"
futures-util = "0.3.30"
fuzzy-matcher = "0.3.7"
pest = { version = "2.7.13", features = ["pretty-print"] }
pest_derive = "2.7.13"
prog-bot-common = { version = "0.1.0", path = "../../common-lib" }
prog-bot-data-types = { version = "0.1.0", path = "../../data-types" }
rustc-hash = { version = "2.0.0", features = ["nightly"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
