[package]
name = "prog-bot-utterance-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
ctrlc = "3.4.5"
futures-util = "0.3.30"
prog-bot-common = { version = "0.1.0", path = "../../common-lib" }
prog-bot-data-types = { version = "0.1.0", path = "../../data-types" }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
